# MondrianBlocks

./: .gitignore  CMakeLists.txt  KlassenDiagramm-2.drawio  KlassenDiagramm.drawio  README.md
data/: data_file.txt  file_setsGridSizeTo_7.txt
src/: Blocks.cpp  Blocks.hpp  CMakeLists.txt  Colors.hpp  Defines.hpp  Difficulty.cpp  Difficulty.hpp  FileHandler.cpp  FileHandler.hpp  Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  Renderer.cpp  Renderer.hpp  Solver.cpp  Solver.hpp  UserInterface.cpp  UserInterface.hpp  data_file.txt  main.cpp
test/: CMakeLists.txt  test1.cpp  testBlockClass.cpp  testDifficultyClass.cpp  testFileHandlerClass.cpp  testGridClass.cpp  testSolverClass.cpp
tst/: CMakeLists.txt  test1.cpp
